--- a/Main.ipynb
+++ b/Main.ipynb
@@ -40,11 +40,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def format_date_column(serie):\n",
+    "    format_date = []\n",
+    "    for id, value in serie.iteritems():\n",
+    "        if pd.notna(value) == True:\n",
+    "            try:\n",
+    "                value = datetime.strptime(str(value), '%Y-%m-%d %H:%M:%S')\n",
+    "                format_date.append(value)\n",
+    "            except:\n",
+    "                try:\n",
+    "                    value = datetime.strptime(str(value), '%Y-%m-%d')\n",
+    "                    format_date.append(value)\n",
+    "                except:\n",
+    "                    value = 'Format Error'\n",
+    "                    format_date.append(value)\n",
+    "        else:\n",
+    "            value = 'Empty date'\n",
+    "            format_date.append(value)\n",
+    "\n",
+    "    return format_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Daily%20CAB%20Tracker.xlsx\",\n",
     "              filename='Daily CAB Tracker.xlsx')\n",
     "df_compass = pd.read_excel('Daily CAB Tracker.xlsx', sheet_name='Tracker')\n",
     "df_compass.dropna(axis=0, how='all', subset=['Request ID', 'Customer Name'], inplace=True)\n",
-    "df_compass = df_compass[df_compass['RR (internal)'] == 'Yes']"
+    "df_compass = df_compass[df_compass['RR (internal)'] == 'Yes']\n",
+    "df_compass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminating dates older that 2022 from df_compass\n",
+    "\n",
+    "colm = df_compass[['Date Advisor Assigned']].copy()\n",
+    "colm['Date Advisor Assigned'] = format_date_column(colm['Date Advisor Assigned'])\n",
+    "idlist = colm[(colm['Date Advisor Assigned'] == 'Empty date') | (colm['Date Advisor Assigned'] == 'Format Error')].index\n",
+    "colm.drop(axis=0, labels=idlist, inplace=True)\n",
+    "colm = colm[colm['Date Advisor Assigned'] < Timestamp('2022-01-01 00:00:00')]\n",
+    "df_compass.drop(axis=0,labels=(colm['Date Advisor Assigned'].index),inplace=True)"
    ]
   },
   {
@@ -75,33 +119,6 @@
     "        <p><span style=\"color: rgb(71, 85, 119);\">Parece que tienes varios errores en la informaci&oacute;n registrada en tus cuentas.</span></p>\n",
     "        <p><span style=\"color: rgb(71, 85, 119);\">Asegurate de revisar el archivo adjunto para validar los campos que est&aacute;n generando conflictos.</span></p>\n",
     "        <p><span style=\"color: rgb(71, 85, 119);\">Feliz D&iacute;a.</span></p>\"\"\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def format_date_column(serie):\n",
-    "    format_date = []\n",
-    "    for id, value in serie.iteritems():\n",
-    "        if pd.notna(value) == True:\n",
-    "            try:\n",
-    "                value = datetime.strptime(str(value), '%Y-%m-%d %H:%M:%S')\n",
-    "                format_date.append(value)\n",
-    "            except:\n",
-    "                try:\n",
-    "                    value = datetime.strptime(str(value), '%Y-%m-%d')\n",
-    "                    format_date.append(value)\n",
-    "                except:\n",
-    "                    value = 'Format Error'\n",
-    "                    format_date.append(value)\n",
-    "        else:\n",
-    "            value = 'Empty date'\n",
-    "            format_date.append(value)\n",
-    "\n",
-    "    return format_date"
    ]
   },
   {
