Date invite sent code
- Correction in code to be able to handle cells with format error

--- a/main.ipynb
+++ b/main.ipynb
@@ -333,8 +333,11 @@
     "date_init_s['Date First Contact'] = format_date_column(date_init_s['Date First Contact'])\n",
     "date_init_s = date_init_s[~((date_init_s['Date First Contact'] == 'Empty date') & (date_init_s['Date Invite Sent'] == 'Empty date'))]\n",
     "date_init_s = date_init_s[~((date_init_s['Date First Contact'] == 'Empty date') | (date_init_s['Date Invite Sent'] == 'Empty date'))]\n",
+    "format_errors = date_init_s[date_init_s['Date Invite Sent'] == 'Format Error']\n",
+    "date_init_s = date_init_s[~(date_init_s['Date Invite Sent'] == 'Format Error')]\n",
     "date_init_s = date_init_s[date_init_s['Date First Contact'] > date_init_s['Date Invite Sent']]\n",
     "date_init_s['Date Invite Sent'] = 'date older that Date First Contact'\n",
+    "date_init_s = pd.concat([date_init_s, format_errors], axis=0)\n",
     "date_init_s.drop(axis=1, columns=['Date First Contact'], inplace=True)"
    ]
   },
