--- a/Main.ipynb
+++ b/Main.ipynb
@@ -69,10 +69,10 @@
    "source": [
     "p = s.getfile(\"https://nubsieteocho.sharepoint.com/sites/ODAOPS/Shared%20Documents/General/CAB%20Trackers/Daily%20CAB%20Tracker.xlsx\",\n",
     "              filename='Daily CAB Tracker.xlsx')\n",
-    "df_compass = pd.read_excel('Daily CAB Tracker.xlsx', sheet_name='Tracker')\n",
+    "df_compass = pd.read_excel('Daily CAB Tracker.xlsx', sheet_name='Tracker', keep_default_na=False, \n",
+    "            na_values=['-1.#IND', '1.#QNAN', '1.#IND', '-1.#QNAN', '#N/A N/A', '#N/A', '', '#NA', 'NULL', 'null', 'NaN', '-NaN', 'nan', '-nan', ' '])\n",
     "df_compass.dropna(axis=0, how='all', subset=['Request ID', 'Customer Name'], inplace=True)\n",
-    "df_compass = df_compass[df_compass['RR (internal)'] == 'Yes']\n",
-    "df_compass"
+    "df_compass = df_compass[df_compass['RR (internal)'] == 'Yes']"
    ]
   },
   {
@@ -85,10 +85,12 @@
     "\n",
     "colm = df_compass[['Date Advisor Assigned']].copy()\n",
     "colm['Date Advisor Assigned'] = format_date_column(colm['Date Advisor Assigned'])\n",
-    "idlist = colm[(colm['Date Advisor Assigned'] == 'Empty date') | (colm['Date Advisor Assigned'] == 'Format Error')].index\n",
-    "colm.drop(axis=0, labels=idlist, inplace=True)\n",
+    "idException = colm[(colm['Date Advisor Assigned'] == 'Empty date') | (colm['Date Advisor Assigned'] == 'Format Error')].index\n",
+    "idlist = colm[(colm['Date Advisor Assigned'] == 'Empty date')].index\n",
+    "colm.drop(axis=0, labels=idException, inplace=True)\n",
     "colm = colm[colm['Date Advisor Assigned'] < Timestamp('2022-01-01 00:00:00')]\n",
-    "df_compass.drop(axis=0,labels=(colm['Date Advisor Assigned'].index),inplace=True)"
+    "vlist = colm.index.append(idlist) \n",
+    "df_compass.drop(axis=0,labels=vlist, inplace=True)"
    ]
   },
   {
@@ -218,7 +220,6 @@
    "outputs": [],
    "source": [
     "# Date presentation Created\n",
-    "# Note: The column Date Presentation Created do not have the correct format (it's string)\n",
     "\n",
     "pre_created = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Presentation Created']].copy()\n",
     "pre_created['Date Advisor Assigned'] = format_date_column(pre_created['Date Advisor Assigned']) \n",
@@ -272,9 +273,20 @@
    "source": [
     "# Date Invite Sent\n",
     "\n",
-    "dat_invite_s = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Invite Sent']].copy()\n",
+    "dat_invite_s = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Invite Sent','Readout Delivery Status', 'Account Status', 'Account Stage']].copy()\n",
     "dat_invite_s['Date Advisor Assigned'] = format_date_column(dat_invite_s['Date Advisor Assigned']) \n",
     "dat_invite_s['Date Invite Sent'] = format_date_column(dat_invite_s['Date Invite Sent'])\n",
+    "\n",
+    "dat_invite_s = dat_invite_s[~(\n",
+    "                           ((dat_invite_s['Readout Delivery Status'] == 'Declined') & \n",
+    "                           (dat_invite_s['Account Stage'] == 'C_Analysis') | ((dat_invite_s['Account Stage'] == 'C_In Progress')))\n",
+    "                           |\n",
+    "                           ((dat_invite_s['Readout Delivery Status'] == 'Complete'))\n",
+    "                           |\n",
+    "                           ((dat_invite_s['Readout Delivery Status'] == 'Emailed Recommendations'))\n",
+    "                           )\n",
+    "                           ]\n",
+    "\n",
     "dat_invite_s.drop(axis=0, labels=dat_invite_s[(dat_invite_s['Date Advisor Assigned'] == 'Empty date') & (dat_invite_s['Date Invite Sent'] == 'Empty date')].index, inplace=True)\n",
     "dat_invite_s.drop(axis=0, labels=dat_invite_s[(dat_invite_s['Date Advisor Assigned'] == 'Empty date') & (dat_invite_s['Date Invite Sent'].apply(type) != str)].index, inplace=True)\n",
     "\n",
@@ -284,7 +296,7 @@
     "            dat_invite_s.loc[id, 'Date Invite Sent'] = 'Date Advisor Assigned is greater'\n",
     "\n",
     "dat_invite_s.drop(axis=0, labels=dat_invite_s[dat_invite_s['Date Invite Sent'].apply(type) == datetime].index, inplace=True)\n",
-    "dat_invite_s.drop(axis=1, columns=['Date Advisor Assigned'], inplace=True)"
+    "dat_invite_s.drop(axis=1, columns=['Date Advisor Assigned','Readout Delivery Status','Account Status','Account Stage'], inplace=True)"
    ]
   },
   {
@@ -727,8 +739,8 @@
    "outputs": [],
    "source": [
     "# Names of Compass team\n",
-    "\n",
-    "compass_names = df_compass[['Request ID','Advisor Name']]\n",
+    "compass_names = pd.DataFrame()\n",
+    "compass_names[['Request ID','Mail Cisco','Name']] = df_compass[['Request ID','Advisor','Advisor Name']]\n",
     "final_report = compass_names.merge(final_report, how='right', left_on='Request ID', right_on='Request ID')"
    ]
   },
@@ -756,8 +768,8 @@
    "source": [
     "# Email list\n",
     "\n",
-    "error_names = final_report['Advisor Name_x'].to_frame().drop_duplicates().dropna()\n",
-    "send_names = error_names.merge(compass_mails, how='left', left_on='Advisor Name_x', right_on='Advisor Name')\n",
+    "send_names = compass_names.merge(compass_mails, how='right', left_on='Name', right_on='Advisor Name')\n",
+    "send_names.drop_duplicates('Name', inplace=True)\n",
     "send_names"
    ]
   },
@@ -810,8 +822,8 @@
    "outputs": [],
    "source": [
     "for i, colm in send_names.iterrows():\n",
-    "    if pd.isnull(colm['Mail']) == False:\n",
-    "        df_sent = final_report[final_report['Advisor Name_x'] == colm['Advisor Name']]\n",
+    "    if pd.isna(colm['Mail']) == False:\n",
+    "        df_sent = final_report[final_report['Mail Cisco'] == colm['Mail Cisco']]\n",
     "        df_sent.to_excel('compass_error_report_%s.xlsx' % today, index=False)\n",
     "        format_report.format_excel()\n",
     "        if df_sent.shape[0] > 0:\n",
@@ -823,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
