--- a/main.ipynb
+++ b/main.ipynb
@@ -47,7 +47,8 @@
     "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx', sheet_name='COE Reports')\n",
     "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
     "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)\n",
-    "ca.dropna(axis=0, subset=['Request ID'], inplace=True)"
+    "ca.dropna(axis=0, subset=['Request ID'], inplace=True)\n",
+    "ca.drop_duplicates(subset=['Request ID'], inplace=True)"
    ]
   },
   {
@@ -114,7 +115,7 @@
    "source": [
     "# Request Type\n",
     "\n",
-    "request_type = ca[['Request ID', 'Request Type']].copy()\n",
+    "request_type = ca[['Request ID','Request Type']].copy()\n",
     "request_type = request_type[pd.isna(request_type['Request Type'])]\n",
     "request_type['Request Type'] = 'Request Type Empty'"
    ]
@@ -563,7 +564,8 @@
     "follow1 = follow1[~(follow1['Date Readout Done'] == 'Empty date')]\n",
     "follow1['Date Follow Up 1'] = follow1[['Date Readout Done','Date Follow Up 1']].apply(lambda x: follo1_log(x[0],x[1]), axis=1)\n",
     "follow1 = follow1[~(follow1['Date Follow Up 1'].apply(type) == datetime)]\n",
-    "follow1.drop(axis=1, columns=['Date Readout Done'], inplace=True)"
+    "follow1.drop(axis=1, columns=['Date Readout Done'], inplace=True)\n",
+    "follow1 = follow1[~(follow1['Date Follow Up 1'] == 'Empty date')]"
    ]
   },
   {
@@ -646,26 +648,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pre Readout Effort\n",
+    "# Follow Up Effort (min)\n",
     "\n",
-    "follow_eft = ca[['Request ID', 'Date Readout Done','Follow Up Effort (min)']].copy()\n",
-    "\n",
-    "for f, row in follow_eft.iterrows():\n",
-    "    if pd.isnull(row['Date Readout Done']) == False and pd.isnull(row['Follow Up Effort (min)']) == True:\n",
-    "        follow_eft.loc[[f], ['Follow Up Effort (min)']] = 'Should not be empty'\n",
-    "    elif pd.isnull(row['Follow Up Effort (min)']) == False:\n",
-    "        if type(row['Follow Up Effort (min)']) == int or type(row['Follow Up Effort (min)']) == float:\n",
-    "            if row['Follow Up Effort (min)'] > 240:\n",
-    "               follow_eft.loc[[f], ['Follow Up Effort (min)']] = 'Value too hight'\n",
-    "            else:\n",
-    "                follow_eft.loc[[f], ['Follow Up Effort (min)']] = None\n",
-    "        else:\n",
-    "            follow_eft.loc[[f], ['Follow Up Effort (min)']] = None\n",
-    "    else:\n",
-    "        follow_eft.loc[[f], ['Follow Up Effort (min)']] = None\n",
-    "\n",
-    "follow_eft.dropna(axis=0, subset=['Follow Up Effort (min)'], inplace=True)\n",
-    "follow_eft.drop(axis=1, columns=['Date Readout Done'], inplace=True)\n"
+    "follow_eft = ca[['Request ID', 'Date Readout Done','Date Follow Up 1','Follow Up Effort (min)']].copy()\n",
+    "follow_eft = follow_eft[~(follow_eft['Follow Up Effort (min)'] == 0)]\n",
+    "follow_eft['Follow Up Effort (min)'] = follow_eft['Follow Up Effort (min)'].fillna(0)\n",
+    "follow_eft['Follow Up Effort (min)'] = follow_eft['Follow Up Effort (min)'].replace(' ',0)\n",
+    "follow_eft['Follow Up Effort (min)'] = follow_eft['Follow Up Effort (min)'].apply(lambda x: x.replace(',','.') if type(x) == str else x)\n",
+    "follow_eft['Follow Up Effort (min)'] = follow_eft['Follow Up Effort (min)'].apply(lambda x: float(x) if type(x) == str else x)\n",
+    "follow_eft = follow_eft[(follow_eft['Follow Up Effort (min)'] == 0) | (follow_eft['Follow Up Effort (min)'] > 240)]\n",
+    "follow_eft = follow_eft[(pd.notna(follow_eft['Date Readout Done']) == True) | (pd.notna(follow_eft['Date Follow Up 1']) == True) | (follow_eft['Follow Up Effort (min)'] != 0)]\n",
+    "follow_eft['Follow Up Effort (min)'] = follow_eft['Follow Up Effort (min)'].replace(0, 'Empty value')\n",
+    "follow_eft['Follow Up Effort (min)'] = follow_eft['Follow Up Effort (min)'].apply(lambda x: 'Value too high' if type(x) == float else x)\n",
+    "follow_eft = follow_eft[['Request ID','Follow Up Effort (min)']]"
    ]
   },
   {
@@ -675,26 +670,31 @@
    "outputs": [],
    "source": [
     "# Closing Date\n",
-    "def close_date(colm1,colm2,colm3):\n",
-    "    ans = colm3\n",
-    "    if type(colm1) == datetime and type(colm3) == datetime: \n",
-    "        if colm1 > colm3:\n",
+    "def close_date(colm1,colm2,colm3,colm4):\n",
+    "    ans = colm4\n",
+    "    if type(colm1) == datetime and type(colm4) == datetime: \n",
+    "        if colm1 > colm4:\n",
     "            ans = 'date is older than Date Received'\n",
-    "    elif colm3 == 'Empty date':\n",
+    "    elif colm4 == 'Empty date':\n",
     "        if pd.isna(colm2) == False:\n",
     "            if colm2[5] != 'H' and colm2[2] != 'S' and colm2[2] != 'R' and colm2[4] != 'r':\n",
     "                if colm2[2] == 'D' or colm2[2] == 'U' or (colm2[2] == 'O' and colm2[14] == 'L'):\n",
     "                    ans = 'Empty value'\n",
+    "        if pd.notna(colm3) == True:\n",
+    "            if colm3 <= datetime.today():\n",
+    "                ans = 'Empty value'\n",
+    "            else:\n",
+    "                ans = 'Empty value'\n",
     "    return ans\n",
     "\n",
     "\n",
-    "closig_dat = ca[['Request ID', 'Date received','Status', 'Closed Date']].copy()\n",
+    "closig_dat = ca[['Request ID', 'Date received','Status', 'Date Follow Up 3', 'Closed Date']].copy()\n",
     "closig_dat['Closed Date'] = format_date_column(closig_dat['Closed Date'])\n",
     "closig_dat['Date received'] = format_date_column(closig_dat['Date received'])\n",
-    "closig_dat['Closed Date'] = closig_dat[['Date received','Status', 'Closed Date']].apply(lambda row: close_date(row[0],row[1],row[2]), axis=1)\n",
+    "closig_dat['Closed Date'] = closig_dat[['Date received','Status', 'Date Follow Up 3', 'Closed Date']].apply(lambda row: close_date(row[0],row[1],row[2],row[3]), axis=1)\n",
     "closig_dat = closig_dat[~(closig_dat['Closed Date'] == 'Empty date')]\n",
     "closig_dat = closig_dat[closig_dat['Closed Date'].apply(type) != datetime]\n",
-    "closig_dat.drop(axis=1, columns=['Date received','Status'], inplace=True)"
+    "closig_dat.drop(axis=1, columns=['Date received','Status', 'Date Follow Up 3'], inplace=True)"
    ]
   },
   {
@@ -743,9 +743,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.drop_duplicates(subset=['Request ID'], inplace=True)\n",
     "new_table.dropna(axis=0, how='all', subset=new_table.columns[2:], inplace=True)  \n",
-    "t_names = ca[['Request ID','Coverage Advisor']]\n",
+    "t_names = pd.DataFrame()\n",
+    "t_names[['Request ID','Name','Account']] = ca[['Request ID','Coverage Advisor','Account']]\n",
     "new_table = t_names.merge(new_table, how='right', left_on='Request ID', right_on='Request ID')"
    ]
   },
@@ -755,8 +755,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mail_table = new_table['Coverage Advisor_x'].to_frame().drop_duplicates().reset_index(drop=True)\n",
-    "mail_table = mail_table.merge(mail, how='left', left_on='Coverage Advisor_x', right_on='Coverage Advisor')\n",
+    "mail_table = new_table['Name'].to_frame().drop_duplicates().reset_index(drop=True)\n",
+    "mail_table = mail_table.merge(mail, how='left', left_on='Name', right_on='Coverage Advisor')\n",
     "mail_table.dropna(axis=0, subset=['Email'], inplace=True)"
    ]
   },
@@ -817,11 +817,11 @@
    "source": [
     "for i, sheet in mail_table.iterrows():\n",
     "    if pd.isnull(sheet['Email']) == False:\n",
-    "        df_sent = new_table[new_table['Coverage Advisor_x'] == sheet['Coverage Advisor']]\n",
+    "        df_sent = new_table[new_table['Name'] == sheet['Name']]\n",
     "        df_sent.to_excel('error_report_%s.xlsx' % today, index=False)    \n",
     "        excel_formating.format_excel()\n",
     "        if df_sent.shape[0] > 0:\n",
-    "            send_msg(sheet['Email'], myMail, subjectEmail , msg1 % sheet['Coverage Advisor'], True)\n",
+    "            send_msg(sheet['Email'], myMail, subjectEmail , msg1 % sheet['Name'], True)\n",
     "            print(sheet['Email'])\n",
     "        else:\n",
     "            print('Not send to: '+sheet['Email'])"
