correction of validations

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Date Readaout Done // Cisco.\n",
+    "# Date Readaout Done \n",
     "\n",
     "dat_rdone = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Readout Done']].copy()\n",
     "dat_rdone['Date Advisor Assigned'] = format_date_column(dat_rdone['Date Advisor Assigned']) \n",
@@ -171,9 +171,13 @@
     "# Readout delivery status\n",
     "\n",
     "del_status = df_compass[['Request ID', 'Date Readout Done', 'Readout Delivery Status']].copy()\n",
-    "del_status = del_status[(pd.notna(del_status['Date Readout Done'])) & (pd.isna(del_status['Readout Delivery Status']))]\n",
+    "del_status['Date Readout Done'] = format_date_column(del_status['Date Readout Done'])\n",
+    "del_status = del_status[del_status['Date Readout Done'].apply(type) == datetime]\n",
+    "del_status = del_status[del_status['Date Readout Done'] < datetime.today()]\n",
+    "del_status = del_status[pd.isna(del_status['Readout Delivery Status'])]\n",
     "del_status['Readout Delivery Status'] = 'Empty value'\n",
-    "del_status.drop(axis=1, columns=['Date Readout Done'], inplace=True)"
+    "del_status.drop(axis=1, columns=['Date Readout Done'], inplace=True)\n",
+    "del_status"
    ]
   },
   {
@@ -273,22 +277,17 @@
    "source": [
     "# Date Invite Sent\n",
     "\n",
-    "dat_invite_s = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Invite Sent','Readout Delivery Status', 'Account Status', 'Account Stage']].copy()\n",
+    "dat_invite_s = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Invite Sent','Readout Delivery Status']].copy()\n",
     "dat_invite_s['Date Advisor Assigned'] = format_date_column(dat_invite_s['Date Advisor Assigned']) \n",
     "dat_invite_s['Date Invite Sent'] = format_date_column(dat_invite_s['Date Invite Sent'])\n",
     "\n",
-    "dat_invite_s = dat_invite_s[~(\n",
-    "                           ((dat_invite_s['Readout Delivery Status'] == 'Declined') & \n",
-    "                           (dat_invite_s['Account Stage'] == 'C_Analysis') | ((dat_invite_s['Account Stage'] == 'C_In Progress')))\n",
+    "dat_invite_s = dat_invite_s[\n",
+    "                           (dat_invite_s['Readout Delivery Status'] == 'Complete')\n",
     "                           |\n",
-    "                           ((dat_invite_s['Readout Delivery Status'] == 'Complete'))\n",
-    "                           |\n",
-    "                           ((dat_invite_s['Readout Delivery Status'] == 'Emailed Recommendations'))\n",
-    "                           )\n",
+    "                           (dat_invite_s['Readout Delivery Status'] == 'Emailed Recommendations')\n",
     "                           ]\n",
     "\n",
-    "dat_invite_s.drop(axis=0, labels=dat_invite_s[(dat_invite_s['Date Advisor Assigned'] == 'Empty date') & (dat_invite_s['Date Invite Sent'] == 'Empty date')].index, inplace=True)\n",
-    "dat_invite_s.drop(axis=0, labels=dat_invite_s[(dat_invite_s['Date Advisor Assigned'] == 'Empty date') & (dat_invite_s['Date Invite Sent'].apply(type) != str)].index, inplace=True)\n",
+    "dat_invite_s = dat_invite_s[(dat_invite_s['Date Advisor Assigned'].apply(type) == datetime) & (dat_invite_s['Date Invite Sent'].apply(type) == datetime)]\n",
     "\n",
     "for id, row in dat_invite_s.iterrows():\n",
     "    if type(row['Date Advisor Assigned']) == datetime and type(row['Date Invite Sent']) == datetime:\n",
@@ -296,7 +295,7 @@
     "            dat_invite_s.loc[id, 'Date Invite Sent'] = 'Date Advisor Assigned is greater'\n",
     "\n",
     "dat_invite_s.drop(axis=0, labels=dat_invite_s[dat_invite_s['Date Invite Sent'].apply(type) == datetime].index, inplace=True)\n",
-    "dat_invite_s.drop(axis=1, columns=['Date Advisor Assigned','Readout Delivery Status','Account Status','Account Stage'], inplace=True)"
+    "dat_invite_s.drop(axis=1, columns=['Date Advisor Assigned','Readout Delivery Status'], inplace=True)"
    ]
   },
   {
@@ -307,11 +306,18 @@
    "source": [
     "# Date Summary Sent\n",
     "\n",
-    "dat_sum_sent = df_compass[['Request ID', 'Date Readout Done', 'Date Summary Sent']].copy()\n",
+    "dat_sum_sent = df_compass[['Request ID','Readout Delivery Status', 'Date Readout Done', 'Date Summary Sent']].copy()\n",
     "dat_sum_sent['Date Summary Sent'] = format_date_column(dat_sum_sent['Date Summary Sent']) \n",
     "dat_sum_sent['Date Readout Done'] = format_date_column(dat_sum_sent['Date Readout Done'])\n",
-    "dat_sum_sent.drop(axis=0, labels=dat_sum_sent[(dat_sum_sent['Date Readout Done'] == 'Empty date') & (dat_sum_sent['Date Summary Sent'] == 'Empty date')].index, inplace=True)\n",
-    "dat_sum_sent.drop(axis=0, labels=dat_sum_sent[(dat_sum_sent['Date Readout Done'] == 'Empty date') & (dat_sum_sent['Date Summary Sent'].apply(type) != str)].index, inplace=True)\n",
+    "\n",
+    "\n",
+    "dat_sum_sent = dat_sum_sent[\n",
+    "                           (dat_sum_sent['Readout Delivery Status'] == 'Complete')\n",
+    "                           |\n",
+    "                           (dat_sum_sent['Readout Delivery Status'] == 'Emailed Recommendations')\n",
+    "                           ]\n",
+    "\n",
+    "dat_sum_sent = dat_sum_sent[(dat_sum_sent['Date Readout Done'].apply(type) == datetime) & (dat_sum_sent['Date Summary Sent'].apply(type) == datetime)]\n",
     "\n",
     "for id, row in dat_sum_sent.iterrows():\n",
     "    if type(row['Date Summary Sent']) == datetime and type(row['Date Readout Done']) == datetime:\n",
@@ -319,7 +325,7 @@
     "            dat_sum_sent.loc[id, 'Date Summary Sent'] = 'Date Readout is greater'\n",
     "\n",
     "dat_sum_sent.drop(axis=0, labels=dat_sum_sent[dat_sum_sent['Date Summary Sent'].apply(type) == datetime].index, inplace=True)\n",
-    "dat_sum_sent.drop(axis=1, columns=['Date Readout Done'], inplace=True)"
+    "dat_sum_sent.drop(axis=1, columns=['Readout Delivery Status','Date Readout Done'], inplace=True)"
    ]
   },
   {
@@ -589,11 +595,20 @@
    "source": [
     "# Closing Date\n",
     "\n",
-    "clos_date = df_compass[['Request ID', 'Date Readout Done', 'Closing Date']].copy()\n",
+    "clos_date = df_compass[['Request ID', 'Readout Delivery Status', 'Date Readout Done', 'Closing Date']].copy()\n",
     "clos_date['Closing Date'] = format_date_column(clos_date['Closing Date']) \n",
     "clos_date['Date Readout Done'] = format_date_column(clos_date['Date Readout Done'])\n",
-    "clos_date.drop(axis=0, labels=clos_date[(clos_date['Date Readout Done'] == 'Empty date') & (clos_date['Closing Date'] == 'Empty date')].index, inplace=True)\n",
-    "clos_date.drop(axis=0, labels=clos_date[(clos_date['Date Readout Done'] == 'Empty date') & (clos_date['Closing Date'].apply(type) != str)].index, inplace=True)\n",
+    "\n",
+    "\n",
+    "clos_date = clos_date[\n",
+    "                    (clos_date['Readout Delivery Status'] == 'Complete')\n",
+    "                    |\n",
+    "                    (clos_date['Readout Delivery Status'] == 'Emailed Recommendations')\n",
+    "                    |\n",
+    "                    (clos_date['Readout Delivery Status'] == 'Declined')\n",
+    "                    ]\n",
+    "\n",
+    "clos_date = clos_date[(clos_date['Date Readout Done'].apply(type) == datetime) & (clos_date['Closing Date'].apply(type) == datetime)]\n",
     "\n",
     "for id, row in clos_date.iterrows():\n",
     "    if type(row['Closing Date']) == datetime and type(row['Date Readout Done']) == datetime:\n",
@@ -601,7 +616,7 @@
     "            clos_date.loc[id, 'Closing Date'] = 'Date Readout is greater'\n",
     "\n",
     "clos_date.drop(axis=0, labels=clos_date[clos_date['Closing Date'].apply(type) == datetime].index, inplace=True)\n",
-    "clos_date.drop(axis=1, columns=['Date Readout Done'], inplace=True)"
+    "clos_date.drop(axis=1, columns=['Readout Delivery Status','Date Readout Done'], inplace=True)"
    ]
   },
   {
@@ -835,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
