--- a/Main.ipynb
+++ b/Main.ipynb
@@ -176,8 +176,7 @@
     "del_status = del_status[del_status['Date Readout Done'] < datetime.today()]\n",
     "del_status = del_status[pd.isna(del_status['Readout Delivery Status'])]\n",
     "del_status['Readout Delivery Status'] = 'Empty value'\n",
-    "del_status.drop(axis=1, columns=['Date Readout Done'], inplace=True)\n",
-    "del_status"
+    "del_status.drop(axis=1, columns=['Date Readout Done'], inplace=True)"
    ]
   },
   {
@@ -370,11 +369,12 @@
    "source": [
     "# Uplift to SSPT In Pursue\n",
     "\n",
-    "up_sspt = df_compass[['Request ID', 'Date Presentation Created', 'Uplift to SSPT In Pursue']].copy()\n",
+    "up_sspt = df_compass[['Request ID', 'Date Presentation Created', 'AT Interested (SSPT)', 'Uplift to SSPT In Pursue']].copy()\n",
+    "up_sspt = up_sspt[up_sspt['AT Interested (SSPT)'] == 'Yes']\n",
     "up_sspt = up_sspt[pd.notna(up_sspt['Date Presentation Created'])]\n",
     "up_sspt = up_sspt[pd.isna(up_sspt['Uplift to SSPT In Pursue'])]\n",
     "up_sspt['Uplift to SSPT In Pursue'] = 'Empty value'\n",
-    "up_sspt.drop(axis=1, columns=['Date Presentation Created'], inplace=True)"
+    "up_sspt.drop(axis=1, columns=['Date Presentation Created','AT Interested (SSPT)'], inplace=True)"
    ]
   },
   {
@@ -657,7 +657,7 @@
     "                        (account_st['Account Stage'] == 'E_Workshop'))\n",
     "                        |\n",
     "                        ((account_st['Readout Delivery Status'] == 'Complete') & \n",
-    "                        (account_st['Account Status'] == 'F_Completed_ Workshop Done') & \n",
+    "                        ((account_st['Account Status'] == 'F_Completed_ Workshop Done') | (account_st['Account Status'] == 'F_Completed_Analysis Sent')) & \n",
     "                        (account_st['Account Stage'] == 'F_Summary'))\n",
     "                        |\n",
     "                        ((account_st['Readout Delivery Status'] == 'Emailed Recommendations') & \n",
@@ -666,6 +666,10 @@
     "                        |\n",
     "                        ((account_st['Readout Delivery Status'] == 'Postponed') & \n",
     "                        (account_st['Account Status'] == 'E_Postponed') & \n",
+    "                        (account_st['Account Stage'] == 'E_Workshop'))\n",
+    "                        |\n",
+    "                        ((pd.isna(account_st['Readout Delivery Status'])) & \n",
+    "                        (account_st['Account Status'] == 'E_Scheduled') & \n",
     "                        (account_st['Account Stage'] == 'E_Workshop'))\n",
     "                        )]\n",
     "\n",
@@ -844,8 +848,11 @@
     "        if df_sent.shape[0] > 0:\n",
     "            send_msg(colm['Mail'], myMail, subjectEmail , msg1 % colm['Advisor Name'], True)\n",
     "            print(colm['Mail'])\n",
+    "            #Temporal\n",
+    "            if colm['Name'] == 'Miguel Mora' or colm['Name'] == 'Lina Hernández':\n",
+    "                send_msg('luisa.molano@nub78.com', myMail, subjectEmail , msg1 % 'Luisa', True)\n",
     "        else:\n",
-    "            print('Not send to: '+colm['Email'])"
+    "            print('Not send to: '+colm['Mail'])"
    ]
   },
   {
@@ -876,6 +883,13 @@
    "source": [
     "outlServer.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
